--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 <div class="mt-8 flex items-center rounded-lg hover:bg-zinc-900">
     <div>
-        <img src="/src/imgs/send.svg" class="w-24 pr-4">
+        <img src="/src/imgs/Send.svg" class="w-24 pr-4">
     </div>
     <div><p class="text-white font-bold">Balance Transfer</p>
     <a class="text-white text-sm">A balance transfer credit card can save you a lot of money in interest charges.</a>
@@ -219,13 +219,6 @@
 
 
 </div>
-
-<div class="container mx-auto">
-    <div>
-        <img src="/src/imgs/dropbox.png" class="w-32 p-2">
-        </div>
-</div>
-
 
 
 
