--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="container mt-12 mx-2 sm:mx-auto">
     
     <div class="">
-    <p class=""><span class="bg-zinc-900 text-white p-1 rounded-md text-sm">20% <span class="text-gray-600">DESCONTO PARA</span> 1 MÊS DE<span class="text-gray-600"> CONTA</span></span></p>
+    <p class=""><span class="bg-zinc-900 text-white p-1 rounded-md text-sm">20% <span class="text-gray-600">DESCONTO PARA</span> 1 MÊS <span class="text-gray-600">DE CONTA</span></span></p>
     </div>
     <div class="flex-none justify-between sm:flex items-center">
     <div class="mt-2 ">
